--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>KarimLox</title>
+    <title>StartIco</title>
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/libs/fancybox/jquery.fancybox.min.css">
     <link rel="stylesheet" href="src/libs/owl-carousel/owl.carousel.min.css">
